# erriscope

./: README.md  cabal.project  shell.nix
.github/workflows/: haskell-ci.yml
erriscope/: CHANGELOG.md  erriscope.cabal
erriscope-server/: CHANGELOG.md  erriscope-server.cabal
erriscope-server/app/: Main.hs  Paths_erriscope_server.hs
erriscope-server/app/Erriscope/: Html.hs  Sockets.hs
erriscope-server/app/Erriscope/Html/: SyntaxHighlighting.hs  TokenParser.hs
erriscope-server/assets/: index.html  script.js  style.css
erriscope-server/src/Erriscope/: Html.hs  Main.hs  Sockets.hs
erriscope-server/src/Erriscope/Html/: SyntaxHighlighting.hs
erriscope-server/test/: Spec.hs
erriscope-types/: CHANGELOG.md  erriscope-types.cabal
erriscope-types/src/Erriscope/: Types.hs
erriscope-types/test/: Spec.hs
erriscope/src/: Erriscope.hs
erriscope/src/Erriscope/Internal/: GhcFacade.hs
sandbox/: sandbox.cabal
sandbox/app/: Lib.hs  M.hs  Main.hs
