cabal-version:      2.4
name:               erriscope-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md,
                    assets/index.html,
                    assets/script.js,
                    assets/style.css,
                    assets/favicon.ico

executable erriscope-server
    ghc-options: -Wall
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Erriscope.Html
                   Erriscope.Html.SyntaxHighlighting
                   Erriscope.Sockets

    default-extensions: OverloadedStrings
    build-depends:    base >=4.14.0.0 && <4.17.0.0,
                      blaze-html,
                      blaze-markup,
                      bytestring,
                      containers,
                      erriscope-types,
                      file-embed,
                      http-types,
                      parsec,
                      text,
                      transformers,
                      wai,
                      wai-websockets,
                      warp,
                      websockets
    hs-source-dirs:   app
    default-language: Haskell2010
