cabal-version:      2.4
name:               erriscope-server
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Serves a UI for viewing GHC errors.

-- A longer description of the package.
description:
  Runs a server to be used in conjunction with the @erriscope@ plugin to provide
  an ergonomic UI for viewing GHC errors and warnings.
  .
  See the [README](https://github.com/aaronallen8455/erriscope#readme) for more
  information.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

tested-with: GHC==9.0.2, GHC==8.10.7

-- A copyright notice.
-- copyright:
category: tooling, debug, development, plugin
extra-source-files: CHANGELOG.md,
                    assets/index.html,
                    assets/script.js,
                    assets/style.css,
                    assets/favicon.ico

library
  ghc-options: -Wall
               -Wunused-packages
  exposed-modules:
    Erriscope.Main
    Erriscope.Html
    Erriscope.Html.SyntaxHighlighting
    Erriscope.Html.TokenParser
    Erriscope.Sockets
  default-extensions: OverloadedStrings
  build-depends:    base >=4.14.0.0 && <4.17.0.0,
                    blaze-html,
                    bytestring,
                    containers,
                    erriscope-types,
                    file-embed,
                    http-types,
                    parsec,
                    text,
                    wai,
                    wai-websockets,
                    warp,
                    websockets
  hs-source-dirs:   src
  default-language: Haskell2010

executable erriscope-server
    ghc-options: -Wall
                 -Wunused-packages
    main-is:          Main.hs

    default-extensions: OverloadedStrings
    build-depends:    base >=4.14.0.0 && <4.17.0.0,
                      erriscope-server,
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite spec
  main-is: Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base,
    blaze-html,
    bytestring,
    erriscope-server,
    erriscope-types,
    hspec,
    hspec-expectations,
    string-interpolate,
    text
