cabal-version:      2.4
name:               erriscope-types
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Shared types for @erriscope@

-- A longer description of the package.
description:
  A library of types shared across @erriscope@ components.
  .
  See the [README](https://github.com/aaronallen8455/erriscope#readme) for more
  information.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

tested-with: GHC==9.0.2, GHC==8.10.7

-- A copyright notice.
-- copyright:
category: tooling, debug, development, plugin
extra-source-files: CHANGELOG.md

library
    ghc-options: -Wall
    exposed-modules: Erriscope.Types
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.0.0 && <4.17.0.0,
                      cereal,
                      safe,
                      bytestring,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spec
  main-is: Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base,
    erriscope-types,
    hspec,
    hspec-hedgehog,
    hedgehog
