cabal-version:      2.4
name:               erriscope
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    ghc-options: -Wall
    exposed-modules:  Erriscope,
                      Erriscope.Internal.GhcFacade
    build-depends:    base ^>=4.14.0.0,
                      erriscope-types,
                      ghc,
                      websockets,
                      containers,
                      network,
                      bytestring,
                      directory,
                      text,
                      safe-exceptions,
                      transformers
    hs-source-dirs:   src
    default-language: Haskell2010
