cabal-version:      2.4
name:               erriscope
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A GHC plugin for viewing errors.

-- A longer description of the package.
description:
  This is a GHC plugin that sends the errors and warnings emitted by GHC to an
  instance of @erriscope-server@ which then provides an ergonomic UI for
  viewing the messages.
  .
  See the [README](https://github.com/aaronallen8455/erriscope#readme) for more
  information.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
-- author:
maintainer:         aaron@flipstone.com
tested-with: GHC==8.10.7, GHC==9.0.2, GHC==9.2.1

-- A copyright notice.
-- copyright:
category: tooling, debug, development, plugin
extra-source-files: CHANGELOG.md

library
    ghc-options: -Wall
                 -Wunused-packages
    exposed-modules:  Erriscope,
                      Erriscope.Internal.GhcFacade
    build-depends:    base >=4.14.0.0 && <4.17.0.0,
                      erriscope-types,
                      ghc,
                      websockets,
                      containers,
                      network,
                      bytestring,
                      directory,
                      safe-exceptions
    hs-source-dirs:   src
    default-language: Haskell2010
